Creacion de tareas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ToDo</string>
+    <string name="share_text">La tarea con titulo %1s y descripción %2s esta %3s</string>
 </resources>
